[package]
name = "maple"
build = "build.rs"
edition = "2021"
version = "0.1.43"
rust-version = "1.65"
license = "MIT"
publish = false
include = ["/Cargo.toml", "src/*.rs"]
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
homepage = "https://github.com/liuchengxu/vim-clap"
categories = ["command-line-utilities"]
description = "Rust backend for the vim plugin vim-clap"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
tokio = { version = "1.23", features = ["rt"] }

cli = { path = "crates/cli" }
upgrade = { path = "crates/upgrade" }
color-eyre = "0.6.2"

[build-dependencies]
built = { package = "built", version = "0.6", features = ["git2"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
