[workspace.package]
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
version = "0.1.52"
edition = "2021"
homepage = "https://github.com/liuchengxu/vim-clap"
repository = "https://github.com/liuchengxu/vim-clap.git"
license = "MIT"
publish = false

[workspace]
resolver = "2"

members = [
    "crates/cli",
    "crates/code_tools",
    "crates/dirs",
    "crates/filter",
    "crates/icon",
    "crates/maple",
    "crates/maple_config",
    "crates/maple_config/doc_gen",
    "crates/maple_core",
    "crates/maple_derive",
    "crates/maple_lsp",
    "crates/maple_markdown",
    "crates/matcher",
    "crates/matcher/extracted_fzy",
    "crates/paths",
    "crates/pattern",
    "crates/printer",
    "crates/rpc",
    "crates/sublime_syntax",
    "crates/tree_sitter",
    "crates/types",
    "crates/upgrade",
    "crates/utils",
    "crates/xtask",
]

exclude = ["pythonx/clap/fuzzymatch-rs"]

default-members = ["crates/maple"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
cargo_metadata = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.2", features = ["derive"] }
colors-transform = "0.2.11"
criterion = "0.5"
directories = "4.0"
futures = "0.3"
fuzzy-matcher = "0.3"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
indicatif = "0.16"
itertools = "0.10"
lsp = { package = "lsp-types", version = "0.94" }
memchr = "2.5"
num_cpus = "1.13"
once_cell = "1.7"
parking_lot = "0.12"
percent-encoding = "2.2.0"
pulldown-cmark = "0.10.2"
rayon = "1.5"
regex = "1"
rgb2ansi256 = "0.1.1"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.0"
simdutf8 = "0.1"
strsim = "0.10.0"
syntect = "5.0.0"
subprocess = { git = "https://github.com/hniksic/rust-subprocess" }
thiserror = "1.0"
tokio = "1.36"
toml = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
webbrowser = "0.8.10"
which = "5.0.0"
unicode-width = "0.1.4"

# Local deps
cli = { path = "crates/cli" }
code_tools = { path = "crates/code_tools" }
dirs = { path = "crates/dirs" }
filter = { path = "crates/filter" }
icon = { path = "crates/icon" }
maple_config = { path = "crates/maple_config" }
maple_core = { path = "crates/maple_core" }
maple_derive = { path = "crates/maple_derive" }
maple_lsp = { path = "crates/maple_lsp" }
maple_markdown = { path = "crates/maple_markdown" }
matcher = { path = "crates/matcher" }
paths = { path = "crates/paths" }
pattern = { path = "crates/pattern" }
printer = { path = "crates/printer" }
rpc = { path = "crates/rpc" }
sublime_syntax = { path = "crates/sublime_syntax" }
types = { path = "crates/types" }
tree_sitter = { path = "crates/tree_sitter" }
upgrade = { path = "crates/upgrade" }
utils = { path = "crates/utils" }

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
