[workspace]
resolver = "2"

members = [
    "dirs",
    "dumb_analyzer",
    "filter",
    "highlighter",
    "icon",
    "cli",
    "ide",
    "maple_core",
    "maple_derive",
    "matcher",
    "matcher/extracted_fzy",
    "paths",
    "pattern",
    "printer",
    "rpc",
    "types",
    "tree_sitter",
    "utils",
    "upgrade",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
cargo_metadata = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.2", features = ["derive"] }
colors-transform = "0.2.11"
directories = "4.0"
futures = "0.3"
fuzzy-matcher = "0.3"
grep-matcher = "0.1"
grep-regex = "0.1.11"
grep-searcher = "0.1"
ignore = "0.4"
indicatif = "0.16"
itertools = "0.10"
memchr = "2.5"
num_cpus = "1.13"
once_cell = "1.7"
percent-encoding = "2.2.0"
parking_lot = "0.12"
rayon = "1.5"
regex = "1"
rgb2ansi256 = "0.1.1"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
simdutf8 = "0.1"
syntect = "5.0.0"
subprocess = { git = "https://github.com/hniksic/rust-subprocess" }
thiserror = "1.0"
tokio = "1.32"
toml = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
webbrowser = "0.8.10"
unicode-width = "0.1.4"

# Local deps
cli = { path = "./cli" }
dirs = { path = "./dirs" }
dumb_analyzer = { path = "./dumb_analyzer" }
filter = { path = "./filter" }
highlighter = { path = "./highlighter" }
icon = { path = "./icon" }
ide = { path = "./ide" }
maple_core = { path = "./maple_core" }
maple_derive = { path = "./maple_derive" }
matcher = { path = "./matcher" }
paths = { path = "./paths" }
pattern = { path = "./pattern" }
printer = { path = "./printer" }
rpc = { path = "./rpc" }
types = { path = "./types" }
tree_sitter = { path = "./tree_sitter" }
upgrade = { path = "./upgrade" }
utils = { path = "./utils" }
