[package]
name = "cli"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
homepage = "https://github.com/liuchengxu/vim-clap"
description = "CLI for vim-clap Rust backend"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
num_cpus = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "process", "macros", "rt-multi-thread", "sync", "time"] }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subprocess = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

filter = { workspace = true }
icon = { workspace = true }
matcher = { workspace = true }
maple_config = { workspace = true }
maple_core = { workspace = true }
pattern = { workspace = true }
printer = { workspace = true }
types = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
