[package]
name = "code_tools"
version.workspace = true
edition.workspace = true

[dependencies]
cargo_metadata = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "sync"] }
toml = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

paths = { workspace = true }
maple_config = { workspace = true }
maple_lsp = { workspace = true }
