[package]
name = "filter"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subprocess = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

icon = { workspace = true }
matcher = { workspace = true }
pattern = { workspace = true }
printer = { workspace = true }
types = { workspace = true }
utils = { workspace = true }
