[package]
name = "filter"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parking_lot = { workspace = true }
rayon = { workspace = true }
subprocess = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

icon = { workspace = true }
matcher = { workspace = true }
printer = { workspace = true }
types = { workspace = true }
