[package]
name = "formatter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "macros"] }
tracing = { workspace = true }

paths = { workspace = true }
similar = { version = "2.2.1", features = ["bytes"] }
diffy = "0.3.0"
lsp-types = "0.94.1"
