[package]
name = "fuzzy_filter"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false
homepage = "https://github.com/liuchengxu/vim-clap"
categories = ["Fuzzy Filter Library"]

[dependencies]
rayon = "1.2"
anyhow = "1.0"
structopt = "0.3"
fuzzy-matcher = "0.3.1"

subprocess = { git = "https://github.com/hniksic/rust-subprocess", optional = true }

extracted_fzy = { path = "../extracted_fzy" }

[target.'cfg(not(windows))'.dev-dependencies]
termion = "1.5.1"

[features]
default = ["enable_dyn"]
# Allow dynamic filtering
# Avoid introduce needless dependency in pythonx/clap/fuzzymatch-rs as it's sync only.
enable_dyn = ["subprocess"]
