[package]
name = "highlighter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.0"
colorsys = "0.6.7"
once_cell = "1.7"
rgb2ansi256 = "0.1.1"
serde = { version = "1.0",  features = ["derive"] }
syntect = "5.0.0"
tracing = "0.1"

utils = { path = "../utils" }
