[package]
name = "highlighter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.0"
colorsys = "0.6.7"
once_cell = { workspace = true }
rgb2ansi256 = "0.1.1"
serde = { workspace = true,  features = ["derive"] }
syntect = "5.0.0"
tracing = { workspace = true }

utils = { workspace = true }
