[package]
name = "icon"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
homepage = "https://github.com/liuchengxu/vim-clap"
description = """
icon is a tool for drawing an icon according to the path name for vim-clap.
"""

[dependencies]
pattern = { path = "../pattern" }

[build-dependencies]
serde_json = "1.0"
itertools = "0.10"
