[package]
name = "ide"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
cargo_metadata = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "sync"] }
tracing = { workspace = true }
which = { workspace = true }

paths = { workspace = true }
