[package]
name = "linter"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
once_cell = { workspace = true }

paths = { workspace = true }
