[package]
name = "linter"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "process"] }
tracing = { workspace = true }

paths = { workspace = true }
