[package]
name = "maple_cli"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
homepage = "https://github.com/liuchengxu/vim-clap"
description = "vim-clap external filter gadget"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
base64 = "0.13"
bytecount = "0.6"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
curl = "0.4.28"
directories = "3.0"
futures = "0.3"
indicatif = "0.14.0"
itertools = "0.10"
jsonrpc-core = "18.0.0"
tokio = { version = "1.10", features = ["fs", "rt", "process", "macros", "rt-multi-thread", "sync", "time"] }
log = "0.4"
tracing = "0.1"
log4rs = "1.0"
once_cell = "1.7"
parking_lot = "0.11"
rayon = "1.5"
regex = "1.4"
reqwest = { version = "0.10", features = ["blocking"] }
serde = { package = "serde", version = "1.0",  features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

filter = { path = "../filter" }
icon = { path = "../icon" }
matcher = { path = "../matcher" }
pattern = { path = "../pattern" }
printer = { path = "../printer" }
types = { path = "../types" }
upgrade = { path = "../upgrade" }
utility = { path = "../utility" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
