[package]
name = "maple_cli"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
homepage = "https://github.com/liuchengxu/vim-clap"
description = "vim-clap external filter gadget"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
base64 = "0.13"
bytecount = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
crossbeam-channel = "0.5"
directories = "4.0"
futures = "0.3"
itertools = "0.10"
jsonrpc-core = "18.0.0"
tokio = { version = "1.19", features = ["fs", "rt", "process", "macros", "rt-multi-thread", "sync", "time"] }
log = "0.4"
log4rs = "1.0"
once_cell = "1.7"
parking_lot = "0.12"
rayon = "1.5"
regex = "1"
serde = { package = "serde", version = "1.0",  features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

dumb_analyzer = { path = "../dumb_analyzer" }
filter = { path = "../filter" }
icon = { path = "../icon" }
matcher = { path = "../matcher" }
pattern = { path = "../pattern" }
printer = { path = "../printer" }
types = { path = "../types" }
upgrade = { path = "../upgrade" }
utility = { path = "../utility" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
