[package]
name = "maple_cli"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
homepage = "https://github.com/liuchengxu/vim-clap"
description = "vim-clap external filter gadget"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
directories = "4.0"
futures = "0.3"
itertools = "0.10"
num_cpus = "1.13"
tokio = { version = "1.19", features = ["fs", "rt", "process", "macros", "rt-multi-thread", "sync", "time"] }
once_cell = "1.7"
parking_lot = "0.12"
rayon = "1.5"
regex = "1"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
subprocess = { git = "https://github.com/hniksic/rust-subprocess" }
toml = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

dumb_analyzer = { path = "../dumb_analyzer" }
filter = { path = "../filter" }
icon = { path = "../icon" }
matcher = { path = "../matcher" }
pattern = { path = "../pattern" }
printer = { path = "../printer" }
types = { path = "../types" }
upgrade = { path = "../upgrade" }
utility = { path = "../utility" }

[dev-dependencies]
criterion = "0.3"
git = { package = "git2", version = "0.15" }

[[bench]]
name = "benchmark"
harness = false
