[package]
name = "maple_core"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
homepage = "https://github.com/liuchengxu/vim-clap"
description = "Core of vim-clap Rust backend"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
base64 = "0.13"
bytecount = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { workspace = true }
futures = { workspace = true }
# ripgrep for global search
grep-searcher = { workspace = true }
grep-matcher = { workspace = true }
ignore = { workspace = true }
itertools = { workspace = true }
tokio = { version = "1.19", features = ["fs", "rt", "process", "macros", "rt-multi-thread", "sync", "time"] }
once_cell = { workspace = true }
parking_lot = { workspace = true }
percent-encoding = "2.2.0"
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subprocess = { workspace = true }
toml = "0.5"
tracing = { workspace = true }
webbrowser = "0.8.10"

dirs = { workspace = true }
dumb_analyzer = { workspace = true }
filter = { workspace = true }
icon = { workspace = true }
matcher = { workspace = true }
paths = { workspace = true }
pattern = { workspace = true }
printer = { workspace = true }
rpc = { workspace = true }
types = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
git = { package = "git2", version = "0.15" }
