[package]
name = "maple_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.29"
lsp = { package = "lsp-types", version = "0.94" }
rpc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "macros", "sync", "time"] }
tracing = { workspace = true }
which = "5.0.0"
parking_lot = { workspace = true }

paths = { workspace = true }
