[package]
name = "maple_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.29"
lsp = { workspace = true }
parking_lot = { workspace = true }
rpc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "macros", "sync", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

paths = { workspace = true }
