[package]
name = "maple_markdown"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
once_cell = { workspace = true }
percent-encoding = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
webbrowser = { workspace = true }

utils = { workspace = true }
