[package]
name = "maple_markdown"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
markdown = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = { workspace = true }
webbrowser = { workspace = true }
