[package]
name = "markdown_preview_core"
description = "Core library for markdown preview - rendering, file watching, and protocol"
version = "0.1.0"
edition = "2021"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
homepage = "https://github.com/liuchengxu/vim-clap"
repository = "https://github.com/liuchengxu/vim-clap.git"
license = "MIT"
publish = false

[features]
default = []
# Enable offline bundled assets (KaTeX, highlight.js, Mermaid)
offline = []

[dependencies]
notify = "6.1"
once_cell = "1.7"
percent-encoding = "2.2"
pulldown-cmark = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["sync", "time", "fs", "rt"] }
tracing = "0.1"
