[package]
name = "matcher"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"

[dependencies]
fuzzy-matcher = { workspace = true }
grep-matcher = { workspace = true }
grep-regex = { workspace = true }

dumb_analyzer = { workspace = true }
extracted_fzy = { path = "./extracted_fzy" }
pattern = { workspace = true }
types = { workspace = true }
