[package]
name = "matcher"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
fuzzy-matcher = { workspace = true }
grep-matcher = { workspace = true }
grep-regex = { workspace = true }

code_tools = { workspace = true }
extracted_fzy = { path = "./extracted_fzy" }
pattern = { workspace = true }
types = { workspace = true }
norm = { version = "0.1.1", features = ["fzf-v1", "fzf-v2", "__into-score"] }
nucleo-matcher = "0.3.1"
