[package]
name = "printer"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
homepage = "https://github.com/liuchengxu/vim-clap"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
unicode-width = { workspace = true }

icon = { workspace = true }
pattern = { workspace = true }
types = { workspace = true }
utils = { workspace = true }

[target.'cfg(not(windows))'.dev-dependencies]
rayon = { workspace = true }
termion = "1.5.1"
filter = { workspace = true }
